# virtual-world

./: .gitignore  README.md
src/: Antylopa.cpp  Antylopa.h  BarszczSosnowskiego.cpp  BarszczSosnowskiego.h  CMakeLists.txt  Czlowiek.cpp  Czlowiek.h  Guarana.cpp  Guarana.h  Lis.cpp  Lis.h  Mlecz.cpp  Mlecz.h  Organizm.cpp  Organizm.h  Owca.cpp  Owca.h  Roslina.cpp  Roslina.h  Swiat.cpp  Swiat.h  Trawa.cpp  Trawa.h  WilczeJagody.cpp  WilczeJagody.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h  Zwierze.cpp  Zwierze.h  main.cpp
